updating for sp 2025

--- a/package.json
+++ b/package.json
@@ -7,9 +7,8 @@
         "start": "NODE_PATH=./build node build/index.js",
         "postinstall": "tsc",
         "build": "tsc -p .",
-        "dev": "nodemon src/index.ts",
-        "compile-local": "tsc && node -r dotenv/config build/index.js",
-        "local": "node -r dotenv/config build/index.js",
+        "dev": "nodemon -r dotenv/config src/index.ts dotenv_config_path=.env.development",
+        "local": "nodemon -r dotenv/config src/index.ts",
         "lint": "eslint . --ext .ts",
         "test": "echo \"Error: no test specified\" && exit 1",
         "format:check": "prettier --check .",
